--- a/sudexo/package.json
+++ b/sudexo/package.json
@@ -24,7 +24,10 @@
     "dotenv": "^16.4.7",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
+    "expo-document-picker": "^13.0.3",
+    "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
@@ -39,12 +42,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pie-chart": "^4.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-camera": "~16.0.18"
+    "toastify-react-native": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
