--- a/sudexo-backend/package.json
+++ b/sudexo-backend/package.json
@@ -7,7 +7,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -17,5 +16,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "description": ""
 }
